tests/errors/sem.expected-lvalue.lhs-assignment.or
main :: () -> void {
    X :: 5;
    X = 10;
};
